--- a/Pizzeria- Cardoso Agustin/assets/styles/contacto.css
+++ b/Pizzeria- Cardoso Agustin/assets/styles/contacto.css
@@ -10,4 +10,9 @@
 .contact-form {
     display: flex;
     flex-direction: column;
+    transition: transform 1.4s;
+}
+
+.contact-form:hover {
+    transform: rotate(360deg);
 }
