--- a/Pizzeria- Cardoso Agustin/assets/styles/minutas.css
+++ b/Pizzeria- Cardoso Agustin/assets/styles/minutas.css
@@ -13,7 +13,7 @@
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.199);
 }
 
-.image-container{
+.image-container {
     width: 100%;
     height: 70%;
     background-color: beige;
@@ -25,11 +25,12 @@
     height: 100%;
 }
 
-.card-title{
+.card-title {
     display: flex;
     width: 100%;
     justify-content: center;
 }
+
 .bg-italian {
     z-index: 99;
     background: -webkit-linear-gradient(110deg, #50cdf3a3 33%, rgba(0, 0, 0, 0) 33%), -webkit-linear-gradient(110deg, white 66%, #50cdf3a3 66%);
@@ -37,15 +38,18 @@
     background: -moz-linear-gradient(110deg, #50cdf3a3 33%, rgba(0, 0, 0, 0) 33%), -moz-linear-gradient(110deg, white 66%, #50cdf3a3 66%);
     background: linear-gradient(110deg, #50cdf3a3 33%, rgba(0, 0, 0, 0) 33%), linear-gradient(110deg, white 66%, #50cdf3a3 66%);
 }
+
 .card-price {
     display: flex;
     margin-top: 5px;
     width: 100%;
     justify-content: center;
 }
+
 .card-price span {
     z-index: 100;
 }
+
 .card-title span {
     z-index: 100;
 }
@@ -55,20 +59,36 @@
     height: 30%;
 }
 
-.mfooter{
+.mfooter {
     margin-top: 10px;
 }
 
-@media screen and (max-width: 768px){
-    .card-row{
+@media screen and (max-width: 768px) {
+    .card-row {
         display: grid;
         grid-template-columns: 100%;
         padding: 5px;
         height: 50%;
     }
-    .card-container{
+
+    .card-container {
         width: 100%;
         margin-top: 30px;
         height: auto;
     }
 }
+
+body {
+    background: linear-gradient(90deg, rgb(90, 54, 54), rgb(166, 29, 33))
+}
+
+.card-container:hover {
+    transform: translate(5px, 5px);
+    animation: cssAnimation_0 1209ms infinite ease-out 553ms;
+}
+
+@keyframes cssAnimation_0 {
+    to {
+      box-shadow: 3px 3px 17px 9px rgba(206, 177, 177, 0.3);
+    }
+  }
