--- a/Pizzeria- Cardoso Agustin/assets/styles/home.css
+++ b/Pizzeria- Cardoso Agustin/assets/styles/home.css
@@ -4,7 +4,7 @@ h1 {
     font-size: 60px;
     text-align: center;
     color: tomato;
-    border: 5px red outset;
+    border: 5px red outset!important;
 }
 
 
@@ -133,3 +133,5 @@ h1 {
     font: italic bold 30px "Good Foot";
     letter-spacing: 11px;
   }
+
+  
