--- a/Pizzeria- Cardoso Agustin/assets/styles/home.css
+++ b/Pizzeria- Cardoso Agustin/assets/styles/home.css
@@ -1,16 +1,14 @@
-
-
 h1 {
     font-size: 60px;
     text-align: center;
     color: tomato;
-    border: 5px red outset!important;
+    border: 5px red outset !important;
 }
 
 
 
 
-.video{
+.video {
     margin-top: 10px;
     display: flex;
     justify-content: space-around;
@@ -26,58 +24,63 @@ h1 {
     padding: 16px;
 }
 
-.negrita{
+.negrita {
     font-style: italic;
     font-weight: bold;
 }
 
-.txtitaliano{
+.txtitaliano {
     width: 600px;
     font-size: 30px;
     margin-bottom: 2px;
 }
 
-.txt1{
+.txt1 {
     font-family: "Italianno", cursive;
     background-color: green;
     padding: 6px;
 }
-.txt2{
+
+.txt2 {
     font-family: "Italianno", cursive;
-    background-color: white;   
+    background-color: white;
     padding: 6px;
 }
-.txt3{
+
+.txt3 {
     font-family: "Italianno", cursive;
     background-color: red;
     padding: 6px;
 }
-.maps{
+
+.maps {
     margin-top: 50px;
     width: 600px;
     height: 400px;
 
 }
 
- /* NUEVOS ESTILOS !!!! */
+/* NUEVOS ESTILOS !!!! */
 /* HOME IMAGES  */
- .title-container{
-     display: grid;
- }
+.title-container {
+    display: grid;
+}
 
- .home-image-item{
+.home-image-item {
     width: 400px;
     height: 400px;
     object-fit: contain;
     margin-top: 3px;
 }
-.home-images-container{
+
+.home-images-container {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-around;
     /* overflow-wrap: wrap; */
-    /* height: 100%;s */
+    /* height: 100%; */
 }
+
 .home-images {
     width: 100%;
     height: 100%;
@@ -85,53 +88,62 @@ h1 {
 }
 
 /* BANNER */
-.banner-container{
+.banner-container {
     display: grid;
 }
-@media screen and (max-width: 768px){
-    .banner-container{
+
+@media screen and (max-width: 768px) {
+    .banner-container {
         display: none;
     }
-    .home-images-container{
-        display: flex!important;
+
+    .home-images-container {
+        display: flex !important;
         flex-direction: column;
     }
-    .home-image-item{
-        width: 100%!important;
+
+    .home-image-item {
+        width: 100% !important;
     }
-    .video{
+
+    .video {
         flex-direction: column;
         width: 100%;
     }
-    .txtitaliano{
+
+    .txtitaliano {
         width: 100%;
     }
-    iframe{
+
+    iframe {
         width: 100%;
     }
-    .texto1-container{
+
+    .texto1-container {
         width: 100%;
     }
-    .video2-item{
+
+    .video2-item {
         width: 100%;
     }
-    .maps{
+
+    .maps {
         width: 100%;
     }
-    .video2-item.maps iframe{
+
+    .video2-item.maps iframe {
         width: 100%;
     }
 }
 
-.title-container{
+.title-container {
     transform: translate(0px, 0px);
     text-shadow:
-      3px 0px 0px rgba(72, 191, 33, 1),
-      0px 0px 0px rgba(230, 18, 18, 1);
+        3px 0px 0px rgba(72, 191, 33, 1),
+        0px 0px 0px rgba(230, 18, 18, 1);
 }
+
 .text {
     font: italic bold 30px "Good Foot";
     letter-spacing: 11px;
-  }
-
-  
+}
