--- a/Pizzeria- Cardoso Agustin/assets/styles/pizzas.css
+++ b/Pizzeria- Cardoso Agustin/assets/styles/pizzas.css
@@ -1,23 +1,25 @@
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
 
-.image-ganadora{
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.image-ganadora {
   object-fit: cover;
   width: 80%;
 }
-.img-ganadora{
+
+.img-ganadora {
   width: 50%;
 }
