--- a/Pizzeria- Cardoso Agustin/assets/styles/_contacto.scss
+++ b/Pizzeria- Cardoso Agustin/assets/styles/_contacto.scss
@@ -1,8 +1,8 @@
-.contact-container {
+.imagenFondo {
     background-image: url('../img/fondo-contacto.jpeg');
-    opacity: 0.9;
+    opacity: 2.3;
     width: 100%;
-    height: 1000px;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
