--- a/Pizzeria- Cardoso Agustin/assets/styles/_minutas.scss
+++ b/Pizzeria- Cardoso Agustin/assets/styles/_minutas.scss
@@ -17,7 +17,6 @@
     width: 100%;
     height: 70%;
     background-color: beige;
-    /* background-image: url('../img/empanadas/empanadas.jpg'); */
 }
 
 .image-container img {
@@ -31,7 +30,7 @@
     justify-content: center;
 }
 
-.bg-italian {
+.bg-arg {
     z-index: 99;
     background: -webkit-linear-gradient(110deg, #50cdf3a3 33%, rgba(0, 0, 0, 0) 33%), -webkit-linear-gradient(110deg, white 66%, #50cdf3a3 66%);
     background: -o-linear-gradient(110deg, #50cdf3a3 33%, rgba(0, 0, 0, 0) 33%), -o-linear-gradient(110deg, white 66%, #50cdf3a3 66%);
@@ -71,7 +70,7 @@
     }
 }
 
-body {
+.bodyMinutas {
     background: linear-gradient(90deg, rgb(90, 54, 54), rgb(166, 29, 33))
 }
 
