--- a/Pizzeria- Cardoso Agustin/assets/styles/index.css
+++ b/Pizzeria- Cardoso Agustin/assets/styles/index.css
@@ -54,7 +54,8 @@
   .card-container {
     width: 100%;
     margin-top: 30px;
-    height: auto; } }
+    height: auto; } 
+  }
 
 .bodyMinutas {
   background: linear-gradient(90deg, #5a3636, #a61d21); }
@@ -67,7 +68,9 @@
   to {
     box-shadow: 3px 3px 17px 9px rgba(206, 177, 177, 0.3); } }
 
-table {
+
+
+    table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%; }
@@ -166,12 +169,12 @@ tr:nth-child(even) {
   transform: rotate(360deg); }
 
 .video {
-  margin-top: 10px;
+  margin-top: 30px;
   display: flex;
   justify-content: space-around; }
 
 .texto1-container {
-  width: 569px;
+  width: 600px;
   background-position: right;
   background-color: tomato;
   font-size: 30px;
@@ -185,7 +188,7 @@ tr:nth-child(even) {
 
 .txtitaliano {
   width: 600px;
-  font-size: 30px;
+  font-size: 25px;
   margin-bottom: 2px; }
 
 .txt1 {
@@ -204,9 +207,9 @@ tr:nth-child(even) {
   padding: 6px; }
 
 .maps {
-  margin-top: 50px;
+  margin-top: 30px;
   width: 600px;
-  height: 400px; }
+  height: 600px; }
 
 /* NUEVOS ESTILOS !!!! */
 /* HOME IMAGES  */
@@ -214,8 +217,8 @@ tr:nth-child(even) {
   display: grid; }
 
 .home-image-item {
-  width: 400px;
-  height: 400px;
+  width: 600px;
+  height: 600px;
   object-fit: contain;
   margin-top: 3px; }
 
@@ -238,10 +241,10 @@ tr:nth-child(even) {
   .banner-container {
     display: none; }
   .home-images-container {
-    display: flex !important;
+    display: flex;
     flex-direction: column; }
   .home-image-item {
-    width: 100% !important; }
+    width: 100%; }
   .video {
     flex-direction: column;
     width: 100%; }
@@ -313,15 +316,17 @@ h1, .titleContact {
   display: grid; }
 
 .home-image-item {
-  width: 400px;
-  height: 400px;
+  width: 600px;
+  height: 550px;
   object-fit: contain;
   margin-top: 3px; }
 
 .home-images-container {
   display: grid;
   grid-template-columns: auto auto;
-  justify-content: space-around; }
+  justify-content: space-around; 
+  margin-top: 30px;
+}
 
 .home-images {
   width: 100%;
