--- a/Pizzeria- Cardoso Agustin/assets/styles/index.scss
+++ b/Pizzeria- Cardoso Agustin/assets/styles/index.scss
@@ -212,6 +212,8 @@ h1 {
     .navBarDesktop {
         display: none !important;
     }
+    .home-images-container {
+        display: none;
+    }
 }
 
-/* Estilo Empanadas y Minutas */
