--- a/Pizzeria- Cardoso Agustin/assets/styles/_footer.scss
+++ b/Pizzeria- Cardoso Agustin/assets/styles/_footer.scss
@@ -1,11 +1,11 @@
-ul {
+footer ul {
     li.logo {
         float: left;
         margin-right: 10px;
     }
 }
 
-ul {
+footer ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -13,11 +13,11 @@ ul {
     background-color: #237c16e8;
 }
 
-li {
+footer ul li {
     float: right;
 }
 
-li {
+footer ul li {
     a {
         display: block;
         color: white;
@@ -27,7 +27,7 @@ li {
     }
 }
 
-li {
+footer ul li {
     a.link:hover {
         background-color: #2c911da3;
     }
